@startuml class

interface ModelInterface {
  - load_train_data() : tuple
  - load_test_data(): tuple
  - fit(): void
  - predict(): DataFrame
}

class Helper {
  - number_nodes: int

  - count_repeats(): int
  - get_valid_pred(): NDArray
  - get_bandwidth(): int
  - getGraph(): NDArray
  - getResult(): DataFrame
}

class CNNHelper extends Helper {
  - helperImage(): void
  - process_data_to_image(): NDArray
  - get_image_dataset(): tuple
  - get_matrix_from_image(): NDArray
}

class PointerNetHelper extends Helper {
  - get_valid_pred(): NDArray
  - list_of_tuple_of_logits_with_true_to_sequences(): tuple
}

' class EarlyStopping {
'   - patience: int
'   - verbose: boolean
'   - count: int
'   - best_score: double
'   - early_stop: boolean
'   - early_stop: double
'   - delta: int
'   - NUMBER_NODES: int

'   - __call__(): void
'   - save_checkpoint(): void
' }

class CustomLoss {
  - loss_repeated_labels(): tuple
  - forward(): double
}

class DecisionTreeClassifier implements ModelInterface {
  - number_nodes: int
}

class RandomForestClassifier implements ModelInterface {
  - number_nodes: int
}

class CatBoostRegressor implements ModelInterface {
  - number_nodes: int
}

class AdjMatrixCNN implements ModelInterface {
  - number_nodes: int
  - batch_size: int
  - epochs: int
}

class PytorchNeuralNetwork implements ModelInterface {
  - number_nodes: int
  - features_length: int
  - batch_size: int
  - epochs: int

  - load_train_data() : list
  - load_test_data() : list
  - train() : double
  - validate() : double
}

class PointerNetwork implements ModelInterface {
  - number_nodes: int
  - features_length: int
  - batch_size: int
  - epochs: int

  - load_train_data() : list
  - load_test_data() : list
  - train() : double
  - validate() : double
  - get_predicts() : list
}

DecisionTreeClassifier "1" -- "1" Helper

RandomForestClassifier "1" -- "1" Helper

CatBoostRegressor "1" -- "1" Helper

AdjMatrixCNN "1" -- "1" CNNHelper
AdjMatrixCNN "1" -- "1" CustomLoss

PytorchNeuralNetwork "1" -- "1" Helper
PytorchNeuralNetwork "1" -- "1" CustomLoss
' PytorchNeuralNetwork "1" -- "1" EarlyStopping

PointerNetwork "1" -- "1" PointerNetHelper
' PointerNetwork "1" -- "1" EarlyStopping
PointerNetwork "1" -- "1" CustomLoss

@enduml